<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F5891"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/person_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:tint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_icon">

        <androidx.cardview.widget.CardView
            android:id="@+id/phone_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:animateLayoutChanges="true"
            android:elevation="0dp"
            app:cardBackgroundColor="#1B4775"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:tint="#ffffff"
                    app:srcCompat="@drawable/ic_phone_black_24dp" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/phone_number"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    tools:targetApi="o" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/otp_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:animateLayoutChanges="true"
            android:elevation="0dp"
            android:visibility="gone"
            app:cardBackgroundColor="#1B4775"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:tint="#ffffff"
                    app:srcCompat="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/phone_number"
                    android:background="@null"
                    android:hint="@string/otp"
                    android:inputType="phone"
                    tools:targetApi="o" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClick"
        android:padding="16dp"
        android:text="@string/get_otp"
        app:backgroundTint="#16395E"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>